--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="wrap">
     <header>
       <div>
-        <h1>잡동사니</h1>
+        <h1>개미는 뚠뚠 오늘도 뚠뚠</h1>
         <div class="sub">섹션을 클릭해 펼치기/접기</div>
       </div>
     </header>
